--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "throttle-debounce": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
